--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
         <Button
             android:id="@+id/btnFavButton"
             android:text="fav"
-            android:background="#F12727"
+            android:background="@drawable/button_round"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
